<?xml version="1.0"?>
<package format="2">
  <name>hdl_people_tracking_ros2_humble</name>
  <version>0.0.0</version>
  <description>The hdl_people_tracking package</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
